@@ -14,4 +14,4 @@ authority = cpan:SUKRIA
 NextVersion::Semantic.format=%d.%02d
 
 [Prereqs]
-Dancer2 = 0.202000
+Dancer2 = 0.203000
